# lr1_6

./: PROMPT_LOG.md
.github/workflows/: release.yml
task 10/fastcalc/: Cargo.toml  out.py  test_counter.py
task 10/fastcalc/src/: lib.rs  test_lib.rs
task 2/: main_test.go  task2.go
task 3_H/: pyproject.toml
task 3_H/.github/workflows/: release.yml
task 5/: client.py  task5.go  tcp_server_test.go
task 5_H/go/: calculator.go  main_test.go
task 5_H/python/: benchmark.py
task 5_H/rust/: Cargo.toml  README.md
task 5_H/rust/src/: lib.rs  test_lib.rs
