[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "fastcalc"
version = "0.1.0"
description = "Fast Rust calculations for Python"
authors = [
    { name="Your Name" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
]